# warden-worker

./: .gitignore  AGENTS.md  Cargo.toml  README.md  SECURITY.md  rust-toolchain.toml  wrangler.toml
.github/workflows/: backup-d1.yaml  deploy-dev.yaml  push-cloudflare.yaml
docs/: db-backup-recovery.md
migrations/: 0002_add_argon2_fields.sql  0003_add_twofactor.sql  0004_add_avatar_color.sql  0005_add_attachments.sql  0006_add_pending_attachments.sql  0007_add_password_iterations.sql  0008_add_eq_domains.sql  0009_add_ciphers_folders_user_id_index.sql
public/css/: vaultwarden.css
scripts/: apply-web-vault-overrides.sh  generate-global-domains-seed.py  seed-global-domains.sh
sql/: schema.sql
src/: attachments.js  auth.rs  crypto.rs  db.rs  entry.js  error.rs  lib.rs  router.rs
src/durable/: heavy_do.rs  mod.rs
src/handlers/: accounts.rs  attachments.rs  ciphers.rs  config.rs  domains.rs  folders.rs  identity.rs  import.rs  meta.rs  mod.rs  purge.rs  sync.rs  twofactor.rs
src/models/: attachment.rs  cipher.rs  folder.rs  mod.rs  sync.rs  twofactor.rs  user.rs
